# internal/docs/swagger.yaml
@@ -80,6 +80,8 @@ definitions:
         type: string
       valid:
         type: boolean
+      verifiedSignature:
+        type: boolean
     type: object
 info:
   contact: {}
@@ -251,11 +253,11 @@ paths:
       - application/json
       responses:
         "200":
-          description: ""
+          description: OK
         "400":
-          description: ""
+          description: Bad Request
         "500":
-          description: ""
+          description: Internal Server Error
       summary: Do a GET request.
       tags:
       - Proxy Methods
